--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,21 @@
 <resources>
 
     <string name="app_name">eBaySearch</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="eBay_Search">eBay Search</string>
     <string name="action_settings">Settings</string>
+    <string name="Keyword_label"> Keyword</string>
+    <string name="minPrice_label"> Price From </string>
+    <string name="maxPrice_label"> Price To</string>
+    <string name="sortBy_label"> Sort By</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="search_label">Search</string>
+    <string name="clear_label">Clear</string>
+
+    <string-array name="sortBy_options_array">
+        <item>Best Match</item>
+        <item>Price: highest first</item>
+        <item>Price + Shipping: highest first</item>
+        <item>Price + Shipping: lowest first</item>
+    </string-array>
 
 </resources>
