extract items from JSON response in ResultActivity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -23,4 +23,7 @@
         <item>Price + Shipping: lowest first</item>
     </string-array>
 
+    <string name="title_activity_result">ResultActivity</string>
+    <string name="hello_world">Hello world!</string>
+
 </resources>
