DetailsActivity complete (need to fix button appearances and other small tweeks)

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,5 +25,6 @@
 
     <string name="title_activity_result">ResultActivity</string>
     <string name="hello_world">Hello world!</string>
+    <string name="title_activity_details">DetailsActivity</string>
 
 </resources>
